# dndex

./: .gitignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yml  index.html
data/: adventuring_gear.json  barbarian.json  bard.json  cleric.json  druid.json  equipment_packs.json  features.json  fighter.json  import.surql  monk.json
data/classes/: barbarian.json  bard.json  cleric.json  druid.json  fighter.json  monk.json  paladin.json  ranger.json  rogue.json  sorcerer.json  warlock.json  wizard.json
data/equipment/: adventuring_gear.json  equipment_packs.json  tools.json
frontend/: Cargo.toml
frontend/src/: constants.rs  main.rs
frontend/src/components/: ability_score.rs  death_saves.rs  hit_points.rs  labeled_devider.rs  labeled_value.rs  labeled_value_checkbox.rs  mod.rs  passive_abilities.rs  primary_abilities.rs  proficiency_bonus.rs  rectangle.rs  saving_throws.rs  skills.rs
scripts/: sql.sh
src/: constants.rs  main.rs
src/api/: mod.rs  open5e.rs
src/components/: ability_score.rs  armor_class.rs  character_stats.rs  death_save_rolls.rs  death_saves.rs  hit_dice.rs  hit_points.rs  initiative.rs  labeled_divider.rs  labeled_value.rs  labeled_value_checkbox.rs  labeled_value_modifier_box.rs  mod.rs  passive_abilities.rs  player_stats.rs  primary_abilities.rs  rectangle.rs  rectangle_notched.rs  rectangle_scooped.rs  saving_throws.rs  skills.rs  speed.rs  spell_card.rs  spell_slots.rs  spells.rs
src/data/: character_advancement.json  mod.rs
src/models/: classes.rs  equipment.rs  mechanics.rs  mod.rs  models.rs  open5e.rs  srd5e.rs
src/tests/: api_tests.rs  data_tests.rs  mod.rs
(+31 files in other folders)
