[package]
name = "dndex"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew_integration", "parser", "macros"] }
wasm-bindgen = "0.2.87"
fastrand = "2.0.0"

# linker error mitigation
# issue being worked on here: https://github.com/futursolo/stylist-rs/pull/123
[profile.dev.package.wasm-bindgen]
debug-assertions = false
