[package]
name = "dndex"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew_integration", "parser", "macros"] }
fastrand = "2.0"
gloo-net = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
anyhow = "1.0"
comrak = "0.18.0"
minijinja = "1.0"


# linker error mitigation
# issue being worked on here: https://github.com/futursolo/stylist-rs/pull/123
[profile.dev.package.wasm-bindgen]
debug-assertions = false
