[package]
name = "dndex"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
stylist = { version = "0.12", features = ["yew_integration", "parser", "macros"] }
fastrand = "2.0"
gloo-net = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.1"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
comrak = "0.18"
minijinja = "1.0"
lazy_static = "1.4"
